Seletores, Propriedades e Box Model parte 1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <section id="presentation">
+        <section id="presentation-container">
             <div>
                 <h1>Transformando em produtos digitais</h1>
                 <p>Para que nossos clientes mantenham altos níveis de qualidade, oferecemos serviços de gestão de projetos e análise de negócios com nossa equipe especializada em diversos setores.</p>
