Seletores, Propriedades e Box Model parte 3

--- a/index.html
+++ b/index.html
@@ -24,6 +24,16 @@
           </p>
         </div>
       </section>
+      <section >
+        <div >
+          <img src="./assets/user.png" alt="icone de contato">
+          <h2>Entre em contato</h2>
+          <p>
+            Contate-nos para obter informações detalhadas sobre nossas soluções, serviços e produtos.
+          </p>
+          <button>Enviar mensagem</button>
+        </div>
+      </section>
     </main>
   </body>
 </html>
