--- a/index.html
+++ b/index.html
@@ -24,15 +24,14 @@
           </p>
         </div>
       </section>
-      <section >
-        <div >
+      <section class="container">
           <img src="./assets/user.png" alt="icone de contato">
-          <h2>Entre em contato</h2>
+          <h2 class="contact-title">Entre em contato</h2>
           <p>
             Contate-nos para obter informações detalhadas sobre nossas soluções, serviços e produtos.
           </p>
           <button>Enviar mensagem</button>
-        </div>
+
       </section>
     </main>
   </body>
