--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
       <section id="presentation-container">
         <div id="presentation">
-          <h1>Transformando em produtos digitais</h1>
+          <h1 class="h1">Transformando em produtos digitais</h1>
           <p>
             Para que nossos clientes mantenham altos níveis de qualidade,
             oferecemos serviços de gestão de projetos e análise de negócios com
