--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </p>
         </div>
       </section>
-      <section class="container">
+      <section class="container background-gradient">
           <img src="./assets/user.png" alt="icone de contato">
           <h2 class="contact-title">Entre em contato</h2>
           <p>
