--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           </p>
         </div>
       </section>
+      <section class="container background-red">
+        <h2 class="contact-title">O que oferecemos de melhor?</h2>
+        <p>
+          Soluções suportadas por IoT
+                </p>
+      </section>
       <section class="container background-gradient">
           <img src="./assets/user.png" alt="icone de contato">
           <h2 class="contact-title">Entre em contato</h2>
