Aplicando flex no projeto 2

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         <p>
           Soluções suportadas por IoT
                 </p>
+                <div>
+                  <div>O que oferecemos de melhor?</div>
+ <div></div> Qualidade de Software
+  <div>Soluções suportadas por IoT</div> 
+  <div>Prever possíveis erros na aplicação</div>
+  <div>Evitar  possíveis riscos</div>
+ <div>Economia de tempo e custo</div> 
+                 
+                </div>
       </section>
       <section class="container background-gradient">
           <img src="./assets/user.png" alt="icone de contato">
