Aplicando flex no projeto 4

--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@
       <section class="container background-red">
         <h2 class="contact-title">O que oferecemos de melhor?</h2>
         <p>Soluções suportadas por IoT</p>
-        <div>
-          <div>O que oferecemos de melhor?</div>
-          <div>Soluções suportadas por IoT</div>
-
+        <div>O que oferecemos de melhor?</div>
+        <div id="qualities">
           <div>Qualidade de Software</div>
           <img src="assets/arrow.png" alt="" />
 
