Invertendo elementos utilizando Flexbox

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
       <section class="container background-red">
         <h2 class="contact-title">O que oferecemos de melhor?</h2>
         <p>Soluções suportadas por IoT</p>
-        <div>O que oferecemos de melhor?</div>
         <div id="qualities">
           <div>Qualidade de Software</div>
           <img src="assets/arrow.png" alt="" />
@@ -40,6 +39,11 @@
 
           <div>Economia de tempo e custo</div>
         </div>
+      </section>
+      <section class="container">
+        <article>
+          
+        </article>
       </section>
       <section class="container background-gradient">
         <img src="./assets/user.png" alt="icone de contato" />
