Invertendo elementos utilizando Flexbox

--- a/index.html
+++ b/index.html
@@ -42,7 +42,20 @@
       </section>
       <section class="container">
         <article>
-          
+          <div>
+            <h2></h2>
+            <p></p>
+            <button></button>
+            <img src="" alt="">
+          </div>
+        </article>
+        <article>
+          <div>
+            <h2></h2>
+            <p></p>
+            <button></button>
+            <img src="" alt="">
+          </div>
         </article>
       </section>
       <section class="container background-gradient">
