--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
         </div>
       </section>
       <section class="container">
-        <article>
-          <div>
+        <article class="article-container">
+          <div class="article-details">
             <h2>Gestão de Qualidade e Processos</h2>
             <p>Nossa equipe experiente; É composto por gerentes de projetos especializados, com experiência em diversos setores e com certificação PMP®. Estamos aqui para apoiar a gestão dos seus projetos, fortalecer as áreas que você considera fracas e implementar e desenvolver a metodologia PMI® com validade internacional na sua empresa.</p>
-            <button></button>
-            <img src="assets/img1.png" alt="">
+            <button>Ver Mais</button>
           </div>
+          <img src="assets/img1.png" alt="">
         </article>
-        <article>
-          <div>
+        <article class="article-container">
+          <div class="article-details">
             <h2>Gerenciamento e análise de testes</h2>
             <p>Para evitar erros de software nos projetos que consultamos, aplicamos cuidadosamente os testes que realizamos em cada etapa do projeto, seja manualmente ou com automação de testes. Nossa experiente equipe de testes oferece às instituições uma experiência de cliente segura, de alta qualidade e satisfatória do início ao fim, com serviços de teste de software de alta qualidade.</p>
-            <button></button>
-            <img src="assets/img2.png" alt="">
+            <button>Ver Mais</button>
           </div>
+          <img src="assets/img2.png" alt="">
         </article>
       </section>
       <section class="container background-gradient">
