Invertendo elementos utilizando Flexbox 6

--- a/index.html
+++ b/index.html
@@ -74,6 +74,34 @@
         </p>
         <button>Enviar mensagem</button>
       </section>
+      <footer class="container">
+        <section>
+          <ul>
+            <li>Soluções e Serviços</li>
+            <li>Desenvolvimento de software</li>
+            <li>Terceirização</li>
+            <li>Gestão de Qualidade e Processos</li>
+            <li>Consultoria</li>
+            <li>Soluções suportadas por IoT</li>
+          </ul>
+          <ul>
+            <li>Produtos</li>
+            <li>Sistema de gestão educacional</li>
+            <li>Sistema de Gestão de Capital Humano</li>
+            <li>Sistema de gerenciamento de conteúdo</li>
+          </ul>
+          <ul>
+            <li>Institucional</li>
+            <li>Sobre nós</li>
+            <li>Parceiros</li>
+          </ul>
+          <ul>
+            <li>Comunicação</li>
+            <li>Contato para informações</li>
+            <li>Contato com especialistas</li>
+          </ul>
+        </section>
+      </footer>
     </main>
   </body>
 </html>
