Invertendo elementos utilizando Flexbox 6

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         </p>
         <button>Enviar mensagem</button>
       </section>
-      <footer class="container">
-        <section>
+      <footer class="container background-red">
+        <section class="footer-list">
           <ul>
             <li>Soluções e Serviços</li>
             <li>Desenvolvimento de software</li>
