Adicionando espaço entre elementos utilizando Flexbox 3

--- a/index.html
+++ b/index.html
@@ -76,27 +76,27 @@
       </section>
       <footer class="container background-red">
         <section class="footer-list">
-          <ul>
-            <li>Soluções e Serviços</li>
+          <ul >
+            <li class="footer-list-title">Soluções e Serviços</li>
             <li>Desenvolvimento de software</li>
             <li>Terceirização</li>
             <li>Gestão de Qualidade e Processos</li>
             <li>Consultoria</li>
             <li>Soluções suportadas por IoT</li>
           </ul>
-          <ul>
-            <li>Produtos</li>
+          <ul >
+            <li class="footer-list-title">Produtos</li>
             <li>Sistema de gestão educacional</li>
             <li>Sistema de Gestão de Capital Humano</li>
             <li>Sistema de gerenciamento de conteúdo</li>
           </ul>
-          <ul>
-            <li>Institucional</li>
+          <ul >
+            <li class="footer-list-title">Institucional</li>
             <li>Sobre nós</li>
             <li>Parceiros</li>
           </ul>
-          <ul>
-            <li>Comunicação</li>
+          <ul >
+            <li class="footer-list-title">Comunicação</li>
             <li>Contato para informações</li>
             <li>Contato com especialistas</li>
           </ul>
