--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <footer class="container background-red">
         <section class="footer-list">
           <ul >
-            <li class="footer-list-title">Soluções e Serviços</li>
+            <li >Soluções e Serviços</li>
             <li>Desenvolvimento de software</li>
             <li>Terceirização</li>
             <li>Gestão de Qualidade e Processos</li>
@@ -85,18 +85,18 @@
             <li>Soluções suportadas por IoT</li>
           </ul>
           <ul >
-            <li class="footer-list-title">Produtos</li>
+            <li >Produtos</li>
             <li>Sistema de gestão educacional</li>
             <li>Sistema de Gestão de Capital Humano</li>
             <li>Sistema de gerenciamento de conteúdo</li>
           </ul>
           <ul >
-            <li class="footer-list-title">Institucional</li>
+            <li >Institucional</li>
             <li>Sobre nós</li>
             <li>Parceiros</li>
           </ul>
           <ul >
-            <li class="footer-list-title">Comunicação</li>
+            <li >Comunicação</li>
             <li>Contato para informações</li>
             <li>Contato com especialistas</li>
           </ul>
