--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
           </p>
         </div>
       </section>
+      <section class="container">
+        <h2 class="contact-title">Qualidade e Processos</h2>
+        <p>Para que nossos clientes mantenham altos níveis de qualidade, oferecemos serviços de Gestão de Projetos, Análise de Negócios e Gestão de Testes com nossa equipe especializada e com experiência em diversos setores.</p>
+      </section>
       <section class="container background-red">
         <h2 class="contact-title">O que oferecemos de melhor?</h2>
         <p>Soluções suportadas por IoT</p>
