Posicionamento com Grid Layout 2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,44 @@
       </section>
       <section class="container">
         <h2 class="contact-title">Qualidade e Processos</h2>
-        <p>Para que nossos clientes mantenham altos níveis de qualidade, oferecemos serviços de Gestão de Projetos, Análise de Negócios e Gestão de Testes com nossa equipe especializada e com experiência em diversos setores.</p>
+        <p>
+          Para que nossos clientes mantenham altos níveis de qualidade,
+          oferecemos serviços de Gestão de Projetos, Análise de Negócios e
+          Gestão de Testes com nossa equipe especializada e com experiência em
+          diversos setores.
+        </p>
+        <div class="grid-container">
+          <div class="grid-item">
+            <img src="assets/documentos.png" alt="" />
+            <h3></h3>
+            <p></p>
+          </div>
+          <div class="grid-item">
+            <img src="assets/estrela.png" alt="" />
+            <h3></h3>
+            <p></p>
+          </div>
+          <div class="grid-item">
+            <img src="assets/coroa.png" alt="" />
+            <h3></h3>
+            <p></p>
+          </div>
+          <div class="grid-item">
+            <img src="assets/grafico.png" alt="" />
+            <h3></h3>
+            <p></p>
+          </div>
+          <div class="grid-item">
+            <img src="assets/grafico-pizza.png" alt="" />
+            <h3></h3>
+            <p></p>
+          </div>
+          <div class="grid-item">
+            <img src="assets/FigmaLogo.png" alt="" />
+            <h3></h3>
+            <p></p>
+          </div>
+        </div>
       </section>
       <section class="container background-red">
         <h2 class="contact-title">O que oferecemos de melhor?</h2>
@@ -44,29 +81,42 @@
           <div>Economia de tempo e custo</div>
         </div>
       </section>
-  
+
       <section class="container">
         <article class="article-container">
           <div class="article-details">
             <div>
               <h2>Gestão de Qualidade e Processos</h2>
-              <p>Nossa equipe experiente; É composto por gerentes de projetos especializados, com experiência em diversos setores e com certificação PMP®. Estamos aqui para apoiar a gestão dos seus projetos, fortalecer as áreas que você considera fracas e implementar e desenvolver a metodologia PMI® com validade internacional na sua empresa.</p>
-
+              <p>
+                Nossa equipe experiente; É composto por gerentes de projetos
+                especializados, com experiência em diversos setores e com
+                certificação PMP®. Estamos aqui para apoiar a gestão dos seus
+                projetos, fortalecer as áreas que você considera fracas e
+                implementar e desenvolver a metodologia PMI® com validade
+                internacional na sua empresa.
+              </p>
             </div>
             <button>Ver Mais</button>
           </div>
-          <img src="assets/img1.png" alt="">
+          <img src="assets/img1.png" alt="" />
         </article>
         <article class="article-container">
           <div class="article-details">
             <div>
               <h2>Gerenciamento e análise de testes</h2>
-              <p>Para evitar erros de software nos projetos que consultamos, aplicamos cuidadosamente os testes que realizamos em cada etapa do projeto, seja manualmente ou com automação de testes. Nossa experiente equipe de testes oferece às instituições uma experiência de cliente segura, de alta qualidade e satisfatória do início ao fim, com serviços de teste de software de alta qualidade.</p>
-
+              <p>
+                Para evitar erros de software nos projetos que consultamos,
+                aplicamos cuidadosamente os testes que realizamos em cada etapa
+                do projeto, seja manualmente ou com automação de testes. Nossa
+                experiente equipe de testes oferece às instituições uma
+                experiência de cliente segura, de alta qualidade e satisfatória
+                do início ao fim, com serviços de teste de software de alta
+                qualidade.
+              </p>
             </div>
             <button>Ver Mais</button>
           </div>
-          <img src="assets/img2.png" alt="">
+          <img src="assets/img2.png" alt="" />
         </article>
       </section>
       <section class="container background-gradient">
@@ -80,27 +130,27 @@
       </section>
       <footer class="container background-red">
         <section class="footer-list">
-          <ul >
-            <li >Soluções e Serviços</li>
+          <ul>
+            <li>Soluções e Serviços</li>
             <li>Desenvolvimento de software</li>
             <li>Terceirização</li>
             <li>Gestão de Qualidade e Processos</li>
             <li>Consultoria</li>
             <li>Soluções suportadas por IoT</li>
           </ul>
-          <ul >
-            <li >Produtos</li>
+          <ul>
+            <li>Produtos</li>
             <li>Sistema de gestão educacional</li>
             <li>Sistema de Gestão de Capital Humano</li>
             <li>Sistema de gerenciamento de conteúdo</li>
           </ul>
-          <ul >
-            <li >Institucional</li>
+          <ul>
+            <li>Institucional</li>
             <li>Sobre nós</li>
             <li>Parceiros</li>
           </ul>
-          <ul >
-            <li >Comunicação</li>
+          <ul>
+            <li>Comunicação</li>
             <li>Contato para informações</li>
             <li>Contato com especialistas</li>
           </ul>
