--- a/index.html
+++ b/index.html
@@ -35,33 +35,33 @@
         <div class="grid-container">
           <div class="grid-item">
             <img src="assets/documentos.png" alt="" />
-            <h3></h3>
-            <p></p>
+            <h3>Análise de Documentos</h3>
+            <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
           </div>
           <div class="grid-item">
             <img src="assets/estrela.png" alt="" />
-            <h3></h3>
-            <p></p>
+            <h3>Aceitação e Avaliação</h3>
+            <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
           </div>
           <div class="grid-item">
             <img src="assets/coroa.png" alt="" />
-            <h3></h3>
-            <p></p>
+            <h3>Regras de negócios</h3>
+            <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
           </div>
           <div class="grid-item">
             <img src="assets/grafico.png" alt="" />
-            <h3></h3>
-            <p></p>
+            <h3>Diagramas de fluxo</h3>
+            <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
           </div>
           <div class="grid-item">
             <img src="assets/grafico-pizza.png" alt="" />
-            <h3></h3>
-            <p></p>
+            <h3>Análise dos stakeholders</h3>
+            <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
           </div>
           <div class="grid-item">
             <img src="assets/FigmaLogo.png" alt="" />
-            <h3></h3>
-            <p></p>
+            <h3>Prototipagem</h3>
+            <p>Ante vulputate ut at accumsan et. Feugiat at tempus, est senectus amet, elementum.</p>
           </div>
         </div>
       </section>
