Posicionamento com Grid Layout 4

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </section>
       <section class="container">
         <h2 class="contact-title">Qualidade e Processos</h2>
-        <p>
+        <p class="grid-p">
           Para que nossos clientes mantenham altos níveis de qualidade,
           oferecemos serviços de Gestão de Projetos, Análise de Negócios e
           Gestão de Testes com nossa equipe especializada e com experiência em
