Posicionamento avançado com Grid Layout 1

--- a/index.html
+++ b/index.html
@@ -119,6 +119,12 @@
           <img src="assets/img2.png" alt="" />
         </article>
       </section>
+      <section class="container">
+        <h2 class="contact-title">Nossas referências</h2>
+        <p>
+          Nossos parceiros de negócios que confiam em nós e trabalham juntos
+        </p>
+      </section>
       <section class="container background-gradient">
         <img src="./assets/user.png" alt="icone de contato" />
         <h2 class="contact-title">Entre em contato</h2>
