Posicionamento avançado com Grid Layout 2

--- a/index.html
+++ b/index.html
@@ -124,6 +124,26 @@
         <p>
           Nossos parceiros de negócios que confiam em nós e trabalham juntos
         </p>
+        <div class="grid-container-companies">
+          <div class="grid-item-companies">
+            <img src="assets/empresa1.png" alt="">
+          </div>
+          <div class="grid-item-companies">
+            <img src="assets/empresa2.png" alt="">
+          </div>
+          <div class="grid-item-companies">
+            <img src="assets/empresa3.png" alt="">
+          </div>
+          <div class="grid-item-companies">
+            <img src="" alt="">
+          </div>
+          <div class="grid-item-companies">
+            <img src="" alt="">
+          </div>
+          <div class="grid-item-companies">
+            <img src="" alt="">
+          </div>
+        </div>
       </section>
       <section class="container background-gradient">
         <img src="./assets/user.png" alt="icone de contato" />
