Posicionamento avançado com Grid Layout 3

--- a/index.html
+++ b/index.html
@@ -135,13 +135,22 @@
             <img src="assets/empresa3.png" alt="">
           </div>
           <div class="grid-item-companies">
-            <img src="" alt="">
+            <img src="assets/empresa4.png" alt="">
           </div>
           <div class="grid-item-companies">
-            <img src="" alt="">
+            <img src="assets/empresa5.png" alt="">
           </div>
           <div class="grid-item-companies">
-            <img src="" alt="">
+            <img src="assets/empresa6.png" alt="">
+          </div>
+          <div class="grid-item-companies">
+            <img src="assets/empresa7.png" alt="">
+          </div>
+          <div class="grid-item-companies">
+            <img src="assets/empresa8.png" alt="">
+          </div>
+          <div class="grid-item-companies">
+            <img src="assets/empresa9.png" alt="">
           </div>
         </div>
       </section>
