Posicionamento avançado com Grid Layout 4

--- a/index.html
+++ b/index.html
@@ -125,31 +125,31 @@
           Nossos parceiros de negócios que confiam em nós e trabalham juntos
         </p>
         <div class="grid-container-companies">
-          <div class="grid-item-companies">
+          <div class="grid-item-companies company-1">
             <img src="assets/empresa1.png" alt="">
           </div>
-          <div class="grid-item-companies">
+          <div class="grid-item-companies company-2">
             <img src="assets/empresa2.png" alt="">
           </div>
-          <div class="grid-item-companies">
+          <div class="grid-item-companies company-3">
             <img src="assets/empresa3.png" alt="">
           </div>
-          <div class="grid-item-companies">
+          <div class="grid-item-companies company-4">
             <img src="assets/empresa4.png" alt="">
           </div>
-          <div class="grid-item-companies">
+          <div class="grid-item-companies company-5">
             <img src="assets/empresa5.png" alt="">
           </div>
-          <div class="grid-item-companies">
+          <div class="grid-item-companies company-6">
             <img src="assets/empresa6.png" alt="">
           </div>
-          <div class="grid-item-companies">
+          <div class="grid-item-companies company-7">
             <img src="assets/empresa7.png" alt="">
           </div>
-          <div class="grid-item-companies">
+          <div class="grid-item-companies company-8">
             <img src="assets/empresa8.png" alt="">
           </div>
-          <div class="grid-item-companies">
+          <div class="grid-item-companies company-9">
             <img src="assets/empresa9.png" alt="">
           </div>
         </div>
