conceito sobre Media Queries 5

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       <section class="container">
         <article class="article-container">
           <div class="article-details">
-            <div>
+            <div class="article-details-inner-section">
               <h2>Gestão de Qualidade e Processos</h2>
               <p>
                 Nossa equipe experiente; É composto por gerentes de projetos
@@ -102,7 +102,7 @@
         </article>
         <article class="article-container">
           <div class="article-details">
-            <div>
+            <div class="article-details-inner-section">
               <h2>Gerenciamento e análise de testes</h2>
               <p>
                 Para evitar erros de software nos projetos que consultamos,
