conceito sobre Media Queries 6

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           <div class="article-details">
             <div class="article-details-inner-section">
               <h2>Gestão de Qualidade e Processos</h2>
-              <p>
+              <p class="p">
                 Nossa equipe experiente; É composto por gerentes de projetos
                 especializados, com experiência em diversos setores e com
                 certificação PMP®. Estamos aqui para apoiar a gestão dos seus
