conceito sobre Media Queries 7

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
               <button>Ver Mais</button>
             </div>
           </div>
-          <img src="assets/img1.png" alt="" />
+          <img src="assets/img1.png" alt="" class="img"  />
         </article>
         <article class="article-container">
           <div class="article-details">
             <div class="article-details-inner-section">
               <h2>Gerenciamento e análise de testes</h2>
-              <p>
+              <p class="p">
                 Para evitar erros de software nos projetos que consultamos,
                 aplicamos cuidadosamente os testes que realizamos em cada etapa
                 do projeto, seja manualmente ou com automação de testes. Nossa
@@ -116,7 +116,7 @@
               <button>Ver Mais</button>
             </div>
           </div>
-          <img src="assets/img2.png" alt="" />
+          <img src="assets/img2.png" alt="" class="img" />
         </article>
       </section>
       <section class="container">
