--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <article class="article-container">
           <div class="article-details">
             <div class="article-details-inner-section">
-              <h2>Gerenciamento e análise de testes</h2>
+              <h2 class="h2">Gerenciamento e análise de testes</h2>
               <p class="p">
                 Para evitar erros de software nos projetos que consultamos,
                 aplicamos cuidadosamente os testes que realizamos em cada etapa
