--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <img src="assets/img2.png" alt="" class="img" />
         </article>
       </section>
-      <section class="container">
+      <section class="container grid-container-bg">
         <h2 class="contact-title">Nossas referências</h2>
         <p>
           Nossos parceiros de negócios que confiam em nós e trabalham juntos
